# coding_exercises

./: .gitignore
Python/beecrowd_2749_Lighter_Mounts/: .gitignore  README.md
Python/beecrowd_2749_Lighter_Mounts/inputs/: input1.txt  input2.txt  input3.txt
Python/beecrowd_2749_Lighter_Mounts/src/: main.py
Python/beecrowd_2749_Lighter_Mounts/tests/: unitTests.py
Python/leetcode_1046_Last_Stone_Weight/src/: main.py
Python/leetcode_128_Longest_Consecutive_Sequence/src/: main.py
Python/leetcode_128_Longest_Consecutive_Sequence/tests/: test1.py
Python/leetcode_150_Evaluate_Reverse_Polish_Notation/src/: main.py
Python/leetcode_155_Min_Stack/src/: main.py
Python/leetcode_20_Valid_Parentheses/: .gitignore
Python/leetcode_20_Valid_Parentheses/src/: jupyter.ipynb  main.py
Python/leetcode_20_Valid_Parentheses/tests/: unitTests.py
Python/leetcode_215_Kth_Largest_Element_In_An_Array/src/: main.py
Python/leetcode_238_Product_Of_Array_Except_Self/: main.py
Python/leetcode_347_Top_K_Frequent_Elements/: main.py
Python/leetcode_36_Valid_Sudoku/: main.py
Python/leetcode_621_task_scheduler/src/: main.py
Rust/: .gitignore
Rust/batalha_naval/: Cargo.toml
Rust/beecrowd_2371_naval_battle/: README.md
Rust/group_anagrams/: Cargo.toml
Rust/local_sql_ide/: docker-compose.yml
Rust/local_sql_ide/rust_mysql_project/: .env  Cargo.toml  Dockerfile.rust
Rust/local_sql_ide/rust_mysql_project/src/: main.rs  models.rs
SQL/stratascratch_10366_customer_feedback_analysis/: script.sql
SQL/stratascratch_10368_population_density/: script.sql
(+9 files in other folders)
